# debian-watch-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: rust.yml
src/: convert.rs  deb822.rs  discover.rs  lex.rs  lib.rs  linebased.rs  mangle.rs  parse.rs  parse_v5.rs  pgp.rs  release.rs  search.rs  subst.rs  templates.rs  traits.rs  types.rs  types_v5.rs
