[package]
name = "debian-watch"
version = "0.3.0"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
edition = "2021"
license = "Apache-2.0"
description = "parser for Debian watch files"
repository = "https://github.com/jelmer/debian-watch-rs.git"
homepage = "https://github.com/jelmer/debian-watch-rs"

[features]
default = []
discover = ["scraper", "reqwest"]
blocking = ["reqwest?/blocking"]
pgp = ["sequoia-openpgp", "anyhow"]

[dependencies]
rowan = "0.16.1"
m_lexer = "0.0.4"
debversion = ">=0.4.7, <0.6"
url = "2.5.7"
deb822-lossless = "0.4.1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
scraper = { version = "0.22", optional = true }
reqwest = { version = "0.12", optional = true }
sequoia-openpgp = { version = "2.0", optional = true, default-features = false, features = ["crypto-nettle"] }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"
