[package]
name = "debian-watch"
version = "0.2.15"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
edition = "2021"
license = "Apache-2.0"
description = "parser for Debian watch files"
repository = "https://github.com/jelmer/debian-watch-rs.git"
homepage = "https://github.com/jelmer/debian-watch-rs"

[features]
default = []
discover = ["scraper", "reqwest"]
blocking = ["reqwest?/blocking"]
pgp = ["sequoia-openpgp", "anyhow"]
deb822 = ["dep:deb822-lossless"]

[dependencies]
rowan = "0.16.1"
m_lexer = "0.0.4"
debversion = ">=0.4.7, <0.6"
deb822-lossless = { version = "0.5", optional = true }
url = "2.5.7"
regex = "1"
scraper = { version = "0.22", optional = true }
reqwest = { version = "0.12", optional = true }
sequoia-openpgp = { version = "2.0", optional = true, default-features = false, features = ["crypto-nettle"] }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"
